--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/MatthewT95/wg-mgmt#readme",
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "express": "^5.1.0"
   }
 }
